envoy-client-grpc.yaml
static_resources:
  listeners:
  - name: listener_static0
    address:
      socket_address:
        address: 0.0.0.0
        port_value: 10020
    filter_chains: [{}]
  - name: limesh_outbound_18080
    address:
      pipe:
        path: /home/jefjiang/tmp/envoy-client-grpc.sock
    filter_chains:
    - filters:
      - name: envoy.filters.network.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          stat_prefix: outbound_0.0.0.0_18080
          http_filters:
          - name: envoy.filters.http.router
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
              dynamic_stats: true
          route_config:
            name: envoy_benchmark_route
            virtual_hosts:
            - name: local_service
              domains: ["*"]
              routes:
              - match:
                  prefix: "/"
                route:
                  cluster: fortio_grpc_cluster
          tracing:
            client_sampling:
              value: 0
            random_sampling:
              value: 0
            overall_sampling:
              value: 0
          generate_request_id: false
          use_remote_address: false
          upgrade_configs:
          - upgrade_type: websocket
          stream_idle_timeout: 0s
          normalize_path: true
          request_id_extension:
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.request_id.uuid.v3.UuidRequestIdConfig
              use_request_id_for_trace_sampling: true
          path_with_escaped_slashes_action: KEEP_UNCHANGED
    listener_filters:
    - name: envoy.filters.listener.http_inspector
      typed_config:
        "@type": type.googleapis.com/envoy.extensions.filters.listener.http_inspector.v3.HttpInspector
    listener_filters_timeout: 0s
    enable_reuse_port: true
    continue_on_listener_filters_timeout: true
  clusters:
  - name: fortio_grpc_cluster
    type: STATIC
    # Comment out the following line to test on v6 networks
    dns_lookup_family: V4_ONLY
    http2_protocol_options: {}
    load_assignment:
      cluster_name: fortio_grpc_cluster
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: 127.0.0.1
                port_value: 18080
    circuit_breakers:
      thresholds:
        - priority: DEFAULT
          max_connections: 1000000000
          max_pending_requests: 1000000000
          max_requests: 1000000000
          max_retries: 1000000000
        - priority: HIGH
          max_connections: 1000000000
          max_pending_requests: 1000000000
          max_requests: 1000000000
          max_retries: 1000000000
    transport_socket:
      name: envoy.transport_sockets.tls
      typed_config:
        "@type": type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.UpstreamTlsContext
        common_tls_context:
          tls_certificates:
          # The following self-signed certificate pair is generated using:
          # $ openssl req -x509 -newkey rsa:2048 -keyout a/front-proxy-key.pem -out  a/front-proxy-crt.pem -days 3650 -nodes -subj '/CN=front-envoy'
          #
          # Instead of feeding it as an inline_string, certificate pair can also be fed to Envoy
          # via filename. Reference: https://envoyproxy.io/docs/envoy/latest/api-v3/config/core/v3/base.proto#config-core-v3-datasource.
          #
          # Or in a dynamic configuration scenario, certificate pair can be fetched remotely via
          # Secret Discovery Service (SDS). Reference: https://envoyproxy.io/docs/envoy/latest/configuration/security/secret.
          - certificate_chain:
              inline_string: |
                -----BEGIN CERTIFICATE-----
                MIICqDCCAZACCQCquzpHNpqBcDANBgkqhkiG9w0BAQsFADAWMRQwEgYDVQQDDAtm
[...]
                m+/R4XnmL4cKQ+5Z
                -----END CERTIFICATE-----
            private_key:
              inline_string: |
                -----BEGIN PRIVATE KEY-----
                MIIEvQIBADANBgkqhkiG9w0BAQEFAASCBKcwggSjAgEAAoIBAQC2GdiSpVAFf5aD
[...]
                q5sGxGrC1RECGB5Zwx2S2ZY=
                -----END PRIVATE KEY-----
node:
  cluster: foo-cluster
  id: sidecar~10.0.0.1~polarisfooenvoy1~linkedin.com

admin:
  address:
    socket_address:
      address: 0.0.0.0
      port_value: 9922
